--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".LoginActivity">
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/log_textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ToDo"
@@ -22,56 +22,62 @@
         app:layout_constraintVertical_bias="0.201" />
 
     <EditText
-        android:id="@+id/email_et"
+        android:id="@+id/log_email_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="68dp"
         android:hint="Email"
+        android:singleLine="true"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/log_textView3" />
 
     <EditText
-        android:id="@+id/password_et"
+        android:id="@+id/log_password_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:singleLine="true"
+        android:inputType="textPassword"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_et" />
+        app:layout_constraintTop_toBottomOf="@+id/log_email_et" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/login_bt"
+        android:id="@+id/log_login_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="36dp"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_et"
+        app:layout_constraintTop_toBottomOf="@id/log_password_et"
         app:layout_constraintVertical_bias="0.17" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/register_bt"
+        android:id="@+id/log_register_bt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:text="register"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/login_bt"
+        app:layout_constraintEnd_toStartOf="@+id/log_login_bt"
         app:layout_constraintHorizontal_bias="0.439"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_et"
+        app:layout_constraintTop_toBottomOf="@id/log_password_et"
         app:layout_constraintVertical_bias="0.173" />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
+        android:visibility="visible"
         app:indicatorSize="40dp"
+        android:indeterminate="true"
+        android:id="@+id/log_progress_bar"
+        app:layout_constraintBottom_toTopOf="@id/log_email_et"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintTop_toBottomOf="@+id/log_textView3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
